crates/aura-web-server/tests/snapshots/durability_harness_test__redis_frames.snap
---
source: crates/aura-web-server/tests/durability_harness_test.rs
expression: snapshot
---
{
  "frames": [
    {
      "events": [],
      "name": "start",
      "store_state": {
        "health_body": {
          "a2a_server": {
            "version": "1.0"
          },
          "aura_version": "<version>",
          "session_store": {
            "backend": "redis",
            "ping": {
              "latency_ms": "<ms>",
              "ok": true
            }
          },
          "status": "healthy",
          "timestamp": "<timestamp>"
        },
        "health_status": 200
      }
    },
    {
      "events": [
        {
          "model": "ollama/aura-stub",
          "session_id": "<id>",
          "trace_id": "<id>"
        },
        {
          "servers": [
            {
              "server_name": "mock",
              "status": "connected",
              "tools_count": 7,
              "transport": "http_streamable"
            }
          ],
          "session_id": "<id>",
          "trace_id": "<id>"
        },
        {
          "agent_id": "main",
          "context_tokens": 10,
          "response_tokens": 5,
          "session_id": "<id>",
          "trace_id": "<id>"
        },
        {
          "agent_id": "coordinator",
          "goal": "Exercise the HITL gate",
          "planning_response": "One worker task calls the gated tool.",
          "routing_mode": "routed",
          "routing_rationale": "The query requires a gated tool execution.",
          "session_id": "<id>",
          "tasks": [
            "Call the gated mock_tool"
          ],
          "trace_id": "<id>"
        },
        {
          "agent_id": "coordinator",
          "description": "Call the gated mock_tool",
          "orchestrator_id": "<id>",
          "session_id": "<id>",
          "task_id": 0,
          "trace_id": "<id>",
          "worker_id": "<id>"
        },
        {
          "agent_id": "coordinator",
          "arguments": {
            "message": "exercise the HITL gate"
          },
          "session_id": "<id>",
          "task_id": 0,
          "tool_call_id": "<id>",
          "tool_name": "mock_tool",
          "trace_id": "<id>",
          "worker_id": "<id>"
        },
        {
          "decision_id": "<id>",
          "origin": {
            "agent_name": "gated",
            "kind": "config_gate",
            "matched_pattern": "mock_tool"
          },
          "scope": {
            "kind": "worker",
            "run_id": "<id>",
            "session_id": "<id>",
            "task_id": 0,
            "worker": "gated"
          },
          "tool_name": "mock_tool"
        },
        {
          "arguments": {
            "message": "exercise the HITL gate"
          },
          "decision_id": "<id>",
          "expires_at": "<timestamp>",
          "origin": {
            "agent_name": "gated",
            "kind": "config_gate",
            "matched_pattern": "mock_tool"
          },
          "scope": {
            "kind": "worker",
            "run_id": "<id>",
            "session_id": "<id>",
            "task_id": 0,
            "worker": "gated"
          },
          "tool_name": "mock_tool"
        }
      ],
      "name": "planning",
      "store_state": {}
    },
    {
      "events": [
        {
          "agent_id": "coordinator",
          "description": "Call the gated mock_tool",
          "orchestrator_id": "<id>",
          "session_id": "<id>",
          "task_id": 0,
          "trace_id": "<id>",
          "worker_id": "<id>"
        },
        {
          "agent_id": "coordinator",
          "arguments": {
            "message": "exercise the HITL gate"
          },
          "session_id": "<id>",
          "task_id": 0,
          "tool_call_id": "<id>",
          "tool_name": "mock_tool",
          "trace_id": "<id>",
          "worker_id": "<id>"
        }
      ],
      "name": "worker_execution",
      "store_state": {}
    },
    {
      "events": [
        {
          "decision_id": "<id>",
          "origin": {
            "agent_name": "gated",
            "kind": "config_gate",
            "matched_pattern": "mock_tool"
          },
          "scope": {
            "kind": "worker",
            "run_id": "<id>",
            "session_id": "<id>",
            "task_id": 0,
            "worker": "gated"
          },
          "tool_name": "mock_tool"
        },
        {
          "arguments": {
            "message": "exercise the HITL gate"
          },
          "decision_id": "<id>",
          "expires_at": "<timestamp>",
          "origin": {
            "agent_name": "gated",
            "kind": "config_gate",
            "matched_pattern": "mock_tool"
          },
          "scope": {
            "kind": "worker",
            "run_id": "<id>",
            "session_id": "<id>",
            "task_id": 0,
            "worker": "gated"
          },
          "tool_name": "mock_tool"
        }
      ],
      "name": "park_at_quiescence",
      "store_state": {}
    },
    {
      "events": [],
      "name": "process_restart",
      "store_state": {
        "health_body": {
          "a2a_server": {
            "version": "1.0"
          },
          "aura_version": "<version>",
          "session_store": {
            "backend": "redis",
            "ping": {
              "latency_ms": "<ms>",
              "ok": true
            }
          },
          "status": "healthy",
          "timestamp": "<timestamp>"
        },
        "health_status": 200
      }
    },
    {
      "events": [],
      "name": "publish_loss_wake_discovery",
      "store_state": {
        "claim_status": 404,
        "durable_decision_state": "unrepresentable: resolve_durable is a staged hole",
        "publish_subscribers": 0
      }
    },
    {
      "events": [],
      "name": "approval_resolution_by_handle",
      "store_state": {
        "resolve_status": 204
      }
    }
  ]
}
